--- a/project-introduction.qmd
+++ b/project-introduction.qmd
@@ -7,17 +7,15 @@
 -   人工智能模块：借助人工智能工具进行数据分析
 -   开发协作模块：与全世界开发者协作，开发自己的软件包
 
-
-::: {.callout-important}
+::: callout-important
 **重要提示**
 
-- 这是一门全新的课程，请同学们**多提宝贵意见**，参与课程完善的过程。
-- 这是一门进阶课，课程有一定难度，请同学们在课堂内外**多花有效时间**。
-- 这是一门实践课，请同学们一定要**在自己的电脑上成功运行**课程中教授的内容。
-- 这是一门 AI 课，请同学们在学习的过程中**主动寻求 AI 工具的帮助**。
-- 这是一门项目课，请同学们**结合自己的研究需求**深入的挖掘项目内容。
+-   这是一门全新的课程，请同学们**多提宝贵意见**，参与课程完善的过程。
+-   这是一门进阶课，课程有一定难度，请同学们在课堂内外**多花有效时间**。
+-   这是一门实践课，请同学们一定要**在自己的电脑上成功运行**课程中教授的内容。
+-   这是一门 AI 课，请同学们在学习的过程中**主动寻求 AI 工具的帮助**。
+-   这是一门项目课，请同学们**结合自己的研究需求**深入的挖掘项目内容。
 :::
-
 
 环境搭建模块的项目内容包括：
 
@@ -25,13 +23,11 @@
 2.  可重复的数据分析环境
 3.  现代工具链
 
-
 数据分析模块的项目内容包括：
 
 1.  分组数据统计分析和可视化
 2.  转录组学数据分析和可视化
 3.  微生物组数据分析及可视化
-
 
 人工智能模块的项目内容包括：
 
@@ -40,7 +36,6 @@
 3.  手搓神经网络模型
 4.  利用拉曼光谱识别病原菌
 5.  计算机视觉辅助分析实验图片
-
 
 开发协作模块的项目内容包括：
 
@@ -57,9 +52,9 @@
 
 ### 课后作业
 
-- 确保电脑上安装了 R、Python 等需要用到的软件
-- 请在雨课堂内完成分组（第二次上课时确认）
-- 请与助教取得联系，建立学习小组
+-   确保电脑上安装了 R、Python 等需要用到的软件
+-   请在雨课堂内完成分组（第二次上课时确认）
+-   请与助教取得联系，建立学习小组
 
 ## 项目二：R 语言统计分析和可视化基础（2学时）
 
@@ -78,7 +73,6 @@
 -   数据集的介绍
 -   `ggpubr` 软件包的应用
 
-
 ### 课后作业
 
 -   阅读论文，并且查阅 GitHub 仓库，在自己电脑中复现论文中的分析结果
@@ -90,9 +84,9 @@
 
 ### 论文简介
 
-- 研究背景
-- 科学问题
-- 转录组学分析的基本原理
+-   研究背景
+-   科学问题
+-   转录组学分析的基本原理
 
 ### 上手实操
 
@@ -113,7 +107,6 @@
 -   阅读论文，并且查阅 GitHub 仓库，在自己电脑中复现论文中的分析结果
 -   将分析结果整理成 PDF 文档，提交到我的文件收集中（使用坚果云收件箱二维码收作业）
 
-
 ## 项目四：微生物组数据分析及可视化（4学时）
 
 本项目基于 dada2 软件包提供的示例数据，展示如何使用 R 语言进行微生物组数据分析及可视化。
@@ -129,7 +122,6 @@
 -   安装 dada2 软件包
 -   加载示例数据
 
-
 ### 课后作业
 
 -   请将代码整理成 PDF 文档，提交到我的文件收集中（使用坚果云收件箱二维码收作业）
@@ -140,22 +132,21 @@
 
 ### 主要内容
 
-- Huggingface
-- OpenAI（ChatAnywhere）
-- 阿里云百炼
+-   Huggingface
+-   OpenAI（ChatAnywhere）
+-   阿里云百炼
 
 ### 上手实操
 
-- 使用 R 调用 OpenAI API
-- 使用 Python 调用 OpenAI API
-- 使用 R 和 Python 调用 HuggingFace API
-- 使用 R 和 Python 调用阿里云百炼 API
+-   使用 R 调用 OpenAI API
+-   使用 Python 调用 OpenAI API
+-   使用 R 和 Python 调用 HuggingFace API
+-   使用 R 和 Python 调用阿里云百炼 API
 
 ### 课后作业
 
-- 申请阿里云百炼 API KEY，配置 Chatbox 桌面应用
-- 使用 Chatbox 桌面应用，选择 DeepSeek 模型，与 AI 对话
-
+-   申请阿里云百炼 API KEY，配置 Chatbox 桌面应用
+-   使用 Chatbox 桌面应用，选择 DeepSeek 模型，与 AI 对话
 
 ## 项目六：手搓神经网络模型（4学时）
 
@@ -181,7 +172,7 @@
 
 ## 项目七：利用拉曼光谱识别病原菌（4学时）
 
-本项目将展示如何利用 R 和 Python 进行拉曼光谱数据的处理和分析，以识别病原菌。
+本项目以一篇 Nature Communications 上面发表的论文为例，展示神经网络模型如何应用于拉曼数据分析，从而实现基于拉曼光谱数据的病原菌识别[@ho2019]。
 
 #### 主要内容
 
@@ -203,12 +194,18 @@
 
 ## 项目八：计算机视觉分析实验图片（4学时）
 
+本项目以发表在 Plant Phenomics 杂志上的一篇论文为例[@serouart2022]，讲述如何使用一种名为 SegVeg 的两阶段语义分割方法，将高分辨率 RGB 图像分割成背景、绿色植被和衰老植被三类。以用来评估植被的生长状态。
+
 ### 主要内容
+
+- 使用 U-net 模型将图像分为植被和背景。
+- 使用支持向量机（SVM）将植被像素进一步分为绿色和衰老植被。
 
 ### 上手实操
 
-### 课后作业
 
+
+### 课后作业
 
 ## 项目九：机器学习算法及实现（4学时）
 
@@ -287,6 +284,3 @@
 ### 课后作业
 
 -   写一个 R 包，并发布到 GitHub/Gitee 上
-
-
-
