--- a/references.bib
+++ b/references.bib
@@ -138,3 +138,17 @@ TLDR: It is shown that the initial ratio can induce emergent properties in cocul
 	url = {https://github.com/csho33/bacteria-ID},
 	langid = {en}
 }
+
+@article{serouart2022,
+	title = {SegVeg: Segmenting RGB Images into Green and Senescent Vegetation by Combining Deep and Shallow Methods},
+	author = {Serouart, Mario and Madec, Simon and David, Etienne and Velumani, Kaaviya and Lopez Lozano, Raul and Weiss, Marie and Baret, {Frédéric}},
+	year = {2022},
+	date = {2022},
+	journal = {Plant Phenomics (Washington, D.C.)},
+	pages = {9803570},
+	volume = {2022},
+	doi = {10.34133/2022/9803570},
+	note = {PMID: 36451876
+PMCID: PMC9680505},
+	langid = {eng}
+}
