更新FAQ，添加关于中文用户名导致路径问题的说明

--- a/FAQ.qmd
+++ b/FAQ.qmd
@@ -27,6 +27,18 @@
 - `setwd("path")` 可更改当前工作目录，但通常不推荐在脚本中使用，以免影响其他代码的执行环境。
 
 
+### 中文用户名导致的路径问题
+
+有不少同学在系统中使用了中文的用户名，这会导致路径问题。需要通过修改用户名的办法才能根本解决。
+
+在 Windows 系统中，可以通过以下步骤修改用户名：
+
+- 在“设置”中找到“账户”。
+- 新建一个本地账户，将其设置为管理员权限。
+- 退出当前账户，登录新建的账户。
+- 在新建的账户下面操作。
+- 旧账户可以先保留，等待半年后或者磁盘空间紧张时，删除原来的账户。
+
 ## 批量线性回归总表
 
 > 来自同学汪意茹的提问：有多个变量和自变量，想分别计算两两之间的线性回归模型，将参数以表格输出。
